--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@
   padding: 1rem 0;
   .blog-post {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(3, 1fr));
     gap: 2rem;
     margin-top: 4rem;
 
@@ -27,5 +27,15 @@
       padding: 2rem;
       text-shadow: #e4ce08 1px 2px 4px;
     }
+  }
+}
+@media (min-width: 600px) {
+  .blog-post {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 900px) {
+  .blog-post {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
